fixing spacing

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -40,3 +40,15 @@ tbody{
   padding-left: 10px;
   padding-right: 10px;
 }
+.books{
+  padding-left: 50px;
+  padding-right: 50px;
+}
+.movies{
+  padding-left: 50px;
+  padding-right: 50px;
+}
+.albums{
+  padding-left: 50px;
+  padding-right: 50px;
+}
